# boxlite

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  codecov.yml
.cargo/: config.toml
.github/workflows/: README.md  build-node.yml  build-runtime.yml  build-wheels.yml  config.yml  lint.yml  test.yml  warm-caches.yml
boxlite/: Cargo.toml  build.rs
boxlite-cli/: Cargo.toml
boxlite-cli/src/: cli.rs
boxlite-cli/src/commands/: serve.rs
boxlite-server/: Cargo.toml
boxlite-server/proto/boxlite/server/: worker.proto
boxlite-server/src/: error.rs  main.rs  types.rs
boxlite-server/src/coordinator/: mod.rs  state.rs
boxlite-server/src/coordinator/handlers/: error.rs  mod.rs  proxy.rs  types.rs
boxlite-server/src/store/: sqlite.rs
boxlite-server/src/worker/: mod.rs  service.rs
boxlite-server/tests/: coordinator_api.rs
boxlite-shared/proto/boxlite/v1/: service.proto
boxlite/src/: lib.rs
boxlite/src/db/: base_disk.rs  mod.rs  schema.rs  snapshot.rs
boxlite/src/db/migration/: mod.rs  v6_to_v7.rs
boxlite/src/disk/: base_disk.rs  constants.rs  image.rs  mod.rs  qcow2.rs
boxlite/src/jailer/: mod.rs
boxlite/src/litebox/: box_impl.rs  clone_export.rs  local_snapshot.rs  snapshot.rs  snapshot_mgr.rs
boxlite/src/litebox/init/: types.rs
boxlite/src/litebox/init/tasks/: guest_rootfs.rs  vmm_spawn.rs
boxlite/src/net/: mod.rs  socket_path.rs
boxlite/src/portal/interfaces/: container.rs
boxlite/src/rest/: litebox.rs
boxlite/src/rootfs/: guest.rs
boxlite/src/runtime/: backend.rs  guest_rootfs_manager.rs  import.rs  layout.rs  rt_impl.rs
boxlite/src/vmm/: guest_check.rs  mod.rs  registry.rs
boxlite/src/vmm/controller/: spawn.rs
boxlite/src/vmm/krun/: engine.rs
boxlite/src/volumes/: container_volume.rs
boxlite/tests/: audit.rs  clone_export_import.rs  mount_security.rs
docs/development/: cli.md
docs/getting-started/: quickstart-rust.md
docs/investigations/: concurrent-exec-deadlock.md
docs/reference/c/: README.md
examples/python/02_features/: mount_host_dir.py  test_auto_idmap.py
examples/python/06_ai_agents/: README.md  drive_box_with_minimax.py
guest/src/: main.rs
guest/src/container/: command.rs  lifecycle.rs  spec.rs
guest/src/service/: container.rs
guest/src/service/exec/: exec_handle.rs  mod.rs  state.rs
guest/src/storage/: idmap.rs
make/: build.mk  changes.mk  clean.mk  coverage.mk  dev.mk  dist.mk  help.mk  quality.mk  setup.mk  test.mk  vars.mk
scripts/setup/: setup-common.sh  setup-macos.sh  setup-manylinux.sh  setup-musllinux.sh  setup-ubuntu.sh
sdks/c/: Cargo.toml  README.md
sdks/c/include/: boxlite.h
sdks/c/src/: ffi.rs
sdks/c/tests/: CMakeLists.txt  test_basic.c  test_errors.c  test_execute.c  test_images.c  test_integration.c  test_lifecycle.c  test_memory.c  test_simple_api.c  test_streaming.c
sdks/go/: README.md  boxlite_test.go  bridge_cgo_prebuilt.go  errors.go  images.go  images_integration_test.go  types.go  wire.go
sdks/go/cmd/setup/: main.go  main_test.go
sdks/node/: .prettierignore  Cargo.toml  README.md  package.json  vitest.config.ts
sdks/node/lib/: browserbox.ts  codebox.ts  computerbox.ts  constants.ts  errors.ts  index.ts  interactivebox.ts  native-contracts.ts  native.ts  simplebox.ts  skillbox.ts
sdks/node/src/: images.rs  lib.rs  runtime.rs  snapshots.rs
sdks/node/tests/: constants.test.ts  errors.test.ts  exec.test.ts  images.integration.test.ts  options.test.ts
sdks/python/: Cargo.toml  README.md  pyproject.toml
sdks/python/boxlite/: __init__.py
sdks/python/boxlite/sync_api/: __init__.py  _boxlite.py  _images.py
sdks/python/src/: images.rs  lib.rs  runtime.rs  snapshots.rs
sdks/python/tests/: test_box_management_mock.py  test_images.py  test_sync_images.py
src/boxlite/: Cargo.toml
src/boxlite/examples/: disk_attachment_test.rs
src/boxlite/resources/seatbelt/: seatbelt_base_policy.sbpl  seatbelt_file_read_policy.sbpl  seatbelt_file_write_policy.sbpl  seatbelt_network_policy.sbpl
src/boxlite/src/: lib.rs  system_check.rs
src/boxlite/tests/: README.md  clone_export_import.rs  copy.rs  detach.rs  exec_options.rs  exec_user.rs  execution_shutdown.rs  health_check.rs  jailer.rs  lifecycle.rs  network.rs  network_spec.rs  pid_file.rs  recovery.rs  rest_integration.rs  runtime.rs  secret_substitution.rs  shutdown.rs  sigstop_quiesce.rs  snapshot.rs  snapshot_clone_deep.rs  timing_profile.rs  zygote_integration.rs
src/cli/: Cargo.toml  README.md
src/cli/src/: cli.rs  config.rs  formatter.rs  main.rs
src/cli/tests/: completion.rs  create.rs  exec.rs  images.rs  info.rs  inspect.rs  list.rs  pull.rs  registry.rs  restart.rs  rm.rs  run.rs  start.rs  stop.rs
src/ffi/: Cargo.toml
src/ffi/src/: error.rs  json.rs  lib.rs  ops.rs  runner.rs  runtime.rs  string.rs
src/guest/: Cargo.toml
src/guest/.cargo/: config.toml
src/guest/src/: ca_trust.rs  layout.rs  main.rs  mounts.rs  network.rs  overlayfs.rs
src/guest/src/container/: capabilities.rs  console_socket.rs  kill.rs  lifecycle.rs  mod.rs  spec.rs  start.rs  stdio.rs  zygote.rs
src/guest/src/service/: container.rs  files.rs  guest.rs  mod.rs  server.rs
src/guest/src/service/exec/: executor.rs  registry.rs  timeout.rs
src/guest/src/storage/: block_device.rs  copy.rs  fsfreeze.rs  mod.rs  perms.rs  virtiofs.rs  volume.rs
src/server/: Cargo.toml  build.rs
src/server/src/: lib.rs
src/server/src/coordinator/: mod.rs
src/server/src/coordinator/handlers/: admin.rs  error.rs  mod.rs  types.rs
src/server/src/scheduler/: mod.rs
src/server/src/store/: mod.rs  schema.rs
src/server/src/worker/: service.rs
src/server/tests/: coordinator_api.rs  openapi_conformance.rs
src/shared/: Cargo.toml  README.md  build.rs
src/shared/proto/boxlite/v1/: service.proto
src/shared/src/: constants.rs  errors.rs  layout.rs  lib.rs  tar.rs  transport.rs
src/test-utils/: Cargo.toml
src/test-utils/src/: assertions.rs  box_test.rs  cache.rs  config_matrix.rs  fault_injection.rs  home.rs  lib.rs  sync_point.rs
(+193 files in other folders)
