[package]
name = "boxlite-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for BoxLite container runtime"
repository = "https://github.com/boxlite-ai/boxlite"
keywords = ["vm", "sandbox", "cli", "container", "security"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "boxlite"
path = "src/main.rs"

[dependencies]
boxlite.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros", "signal"] }
notify = "6.1"
futures = "0.3"
term_size = "0.3"
nix = { version = "0.30.1", features = ["term", "signal"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# HTTP server (serve subcommand)
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization (aligned with core boxlite)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Runtime extraction
dirs = "6.0"
ulid = "1.1"
tabled = "0.17"
chrono = "0.4.43"
comfy-table = "7.2.1"

gtmpl = "0.7"
gtmpl_value = "0.5"
[build-dependencies]

[dev-dependencies]
boxlite-test-utils = { path = "../test-utils" }
assert_cmd = "2.1.1"
predicates = "3.1.3"
rstest = "0.21"
tempfile = "3.24.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/boxlite-cli-v{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
