[package]
name = "boxlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Embeddable virtual machine runtime for secure, isolated code execution"
repository = "https://github.com/boxlite-ai/boxlite"
readme = "../README.md"
keywords = ["vm", "sandbox", "isolation", "container", "security"]
categories = ["virtualization"]
links = "boxlite"

[package.metadata.docs.rs]
no-default-features = true  # Build docs without native deps (API-only)

[lib]
name = "boxlite"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "boxlite-shim"
path = "src/bin/shim/main.rs"

[features]
default = ["embedded-runtime", "krunfw", "e2fsprogs", "bubblewrap"]
libslirp = []                                               # Uses external libslirp-helper binary
gvproxy = ["dep:libgvproxy-sys"]                             # Uses libgvproxy CGO shared library
e2fsprogs = ["dep:e2fsprogs-sys"]                            # Bundled mke2fs for ext4 image creation
bubblewrap = ["dep:bubblewrap-sys"]                          # Bundled bwrap for sandbox isolation (Linux)
krunfw = ["dep:libkrun-sys", "libkrun-sys/krunfw"]           # Download libkrunfw firmware for runtime bundling
krun = ["krunfw", "libkrun-sys/krun"]                        # Build + statically link libkrun.a (only for boxlite-shim)
rest = ["dep:reqwest", "dep:urlencoding"]                    # REST API client backend
embedded-runtime = []                                        # Embed runtime binaries via include_bytes!

[dependencies]
boxlite-shared.workspace = true

e2fsprogs-sys = { workspace = true, optional = true }
libgvproxy-sys = { workspace = true, optional = true }
libkrun-sys = { workspace = true, optional = true }

thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros", "sync", "net", "time", "process", "io-util", "signal"] }
tokio-util = "0.7"
serde_json = "1.0"
futures = "0.3"
async-stream = "0.3"
tonic = "0.12"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
uuid = { version = "1.10", features = ["v4"] }
ulid = "1.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi"] }
tracing-appender = "0.2"
sysinfo = "0.30"
libc = "0.2"
rayon = "1.10"
rusqlite = { version = "0.37", features = ["bundled"] }
parking_lot = "0.12"
inventory = "0.3"
clap = { version = "4.5", features = ["derive"] }
oci-client = { version = "0.15", default-features = false, features = ["rustls-tls"] }
oci-spec = "0.8.3"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
xattr = "1.0"
walkdir = "2.5"
filetime = "0.2"
tempfile = "3.8"
tokio-stream = "0.1.17"
term_size = "0.3"
qcow2-rs = "0.1.6"
zstd = "0.13"
nix = { version = "0.30.1", features = ["mount"] }
rand = "0.9.2"
hex = "0.4.3"
signal-hook = "0.3"
reflink-copy = "0.1"
nanoid = "0.4"

# REST backend (optional)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], optional = true, default-features = false }
urlencoding = { version = "2.1", optional = true }

# Linux-specific dependencies for bind mount support
[target.'cfg(target_os = "linux")'.dependencies]
bubblewrap-sys = { workspace = true, optional = true }  # Bundled bwrap for sandbox isolation

caps = "0.5"
fuse-backend-rs = { version = "0.12", features = ["fusedev"] }
seccompiler = "0.4"  # Generate seccomp BPF filters for jailer
bincode = "2.0"     # Deserialize compiled BPF filters
displaydoc = "0.2"  # Display derive macro for error types

[build-dependencies]
pkg-config = "0.3"
regex = "1"
sha2 = "0.10"

[target.'cfg(target_os = "linux")'.build-dependencies]
seccompiler = { version = "0.4", features = ["json"] }  # Compile JSON filters to BPF at build time
bincode = "2.0"  # Serialize compiled BPF filters

[dev-dependencies]
boxlite-test-utils = { path = "../test-utils" }
proptest = "1.4"
