[package]
name = "boxlite-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared FFI layer for BoxLite SDKs"
publish = false

[lib]
crate-type = ["rlib"]

[features]
default = []

[dependencies]
boxlite = { path = "../boxlite" }

tokio = { version = "1.37", features = ["rt", "rt-multi-thread"] }
serde_json = "1.0"
futures = "0.3"

[dev-dependencies]

