[package]
name = "boxlite-guest"
version.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Boxlite Guest Runtime"
edition = "2021"

[[bin]]
name = "boxlite-guest"
path = "src/main.rs"

[dependencies]
boxlite-shared.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "net", "fs", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["mount", "process", "fs", "sched", "socket"] }
async-trait = "0.1"
uuid = { version = "1.10", features = ["v4"] }
tonic = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-stream = "0.3"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
tar = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"
tokio-vsock = { version = "0.7", features = ["tonic012"] }
libcontainer = { version = "0.5.6", default-features = false, features = ["v2"] }
oci-spec = "0.6"
rtnetlink = "0.14"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
