[package]
name = "boxlite-shared"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Shared types and protocol definitions for BoxLite host-guest communication"
repository = "https://github.com/boxlite-ai/boxlite"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
prost = "0.13"
tonic = "0.12"
tokio = { version = "1", features = ["io-util", "rt"] }
tar = "0.4"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
proptest = "1.4"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
default-features = true
