[package]
name = "boxlite-test-utils"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
boxlite = { path = "../boxlite" }
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
libc = "0.2"
parking_lot = "0.12"
paste = "1"
futures = "0.3"
